--- a/etc/README.org
+++ b/etc/README.org
@@ -7,14 +7,15 @@ resource or treebank, comparing the two resources against one another.
 
 Sketch of the algorithm:
 
-TODO: create class UD_BosqueTreebank with method tagged_sents etc.
-(e.g. subclass of nltk.corpus.CorpusReader)
+TODO: create class UD_BosqueTreebank with method tagged_sents
+etc. (e.g. subclass of nltk.corpus.CorpusReader)
 
 TODO: create Python dictionary from MorphoBr, e.g.
 
-morpho={'baratas':["barato+A+F+PL","barata+N+F+PL","baratar+V+PRS+2+SG"], ...}
-treebank=UD_BosqueTreebank("pt_bosque-ud-*.conllu")
-sentences=treebank.tagged_sents()
+#+begin_src python
+morpho    = {'baratas':["barato+A+F+PL","barata+N+F+PL","baratar+V+PRS+2+SG"], ...}
+treebank  = UD_BosqueTreebank("pt_bosque-ud-*.conllu")
+sentences = treebank.tagged_sents()
 
 for sentence in sentences:
     for word,tag in sentence:
@@ -26,15 +27,16 @@ for sentence in sentences:
                 pprint(errors)
         else:
             print "not found in dict"
+#+end_src
 
-Example sentence:
+** example sentence
 
+#+begin_example
 text = «É uma obra que fala de fé e eu espero que possibilite ao público uma compreensão direta do gospel, uma música de palavras simples e profundas.»
 sent_id = CF733-3
 
 27	palavras	palavra	NOUN	_	Gender=Fem|Number=Plur	25	nmod	_	_
 28	simples	simples	ADJ	_	Gender=Masc|Number=Plur	27	amod	_	_
+#+end_example
 
 underspecified entry in MorphoBr
-
-
